--- a/assets/css/index/style.css
+++ b/assets/css/index/style.css
@@ -1,21 +1,35 @@
+/*
+    Danielle Smith
+    style.css -- stylesheet to manipulate colors, images, and fonts of page
+*/
+
+
+
 #header{
     background-color: rgba(245, 222, 179, .8);
     color: rgba(139, 0, 0, 1);
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
 }
+
 
 #profile{
     background-color: rgba(152, 251, 152, 1);
 }
 
+
 #contact{
     background-color: rgba(152, 251, 152, 1);
 }
 
+
 #portfolio{
     background-color: rgba(173, 255, 47, 1);
 }
+
+
+
 
 .right{
     font-family: Arial, Helvetica, sans-serif;
@@ -28,7 +42,7 @@
 
 
 body{
-    background-image: url("../images/forks.jpg");
+    background-image: url("../../images/forks.jpg");
     background-repeat: no-repeat;
     background-position: right top;
     background-attachment: scroll;
