--- a/assets/css/index/style.css
+++ b/assets/css/index/style.css
@@ -5,12 +5,42 @@
 
 
 
+
+*{
+    box-sizing: border-box;
+}
+
+
+.button{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    color: rgba(139, 0, 0, 1);
+    text-align: center;
+    padding: 7px;
+    margin: 5px;
+    margin-top: 9px;
+}
+
+
+body{
+    background-image: url("../../images/forks.jpg");
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-attachment: scroll;
+    background-size: cover;
+}
+
+
+
+
+
 #header{
     background-color: rgba(245, 222, 179, .8);
     color: rgba(139, 0, 0, 1);
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
+    height: 50px;
 }
 
 
@@ -30,21 +60,3 @@
 
 
 
-
-.right{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    color: rgba(139, 0, 0, 1);
-    width: 200;
-    height: 100;
-    text-align: center;
-}
-
-
-body{
-    background-image: url("../../images/forks.jpg");
-    background-repeat: no-repeat;
-    background-position: right top;
-    background-attachment: scroll;
-    background-size: cover;
-}
