--- a/assets/css/index/buttons.css
+++ b/assets/css/index/buttons.css
@@ -11,7 +11,7 @@
 }
 
 #profile:active{
-    background-color: red;
+    background-color: rgba(220, 20, 60);
 }
 
 #profile:focus{
@@ -22,7 +22,7 @@
 
 
 #profile:active{
-
+    background-color: rgba(220, 20, 60);
 }
 
 #contact:hover{
@@ -35,7 +35,7 @@
 }
 
 #contact:active{
-
+    background-color: rgba(220, 20, 60);
 }
 
 
@@ -49,7 +49,7 @@
 }
 
 #portfolio:active{
-
+    background-color: rgba(220, 20, 60);
 }
 
 
