--- a/assets/css/index/style.css
+++ b/assets/css/index/style.css
@@ -18,7 +18,7 @@
     text-align: center;
     padding: 7px;
     margin: 5px;
-    margin-top: 9px;
+    margin-top: 8px;
 }
 
 
@@ -33,9 +33,14 @@
 .text{
     padding: 5px;
     margin: 10px;
+    margin-top: 0px;
     background-color: rgba(152, 251, 152, 1);
     height: 100px;
     width: 95%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    color: rgba(139, 0, 0, 1);
+
 }
 
 
@@ -46,7 +51,6 @@
     width: 95%;
     height: 30px;
     margin: 10px;
-    margin-bottom:0px;
     padding: 5px;
     background-color: rgba(245, 222, 179, .8);
 
@@ -62,6 +66,13 @@ body{
 }
 
 
+#splashBox{
+    width: 100%;
+    margin: 5px;
+    margin-top: 20px;
+    padding-right: 20px;
+
+}
 
 
 
@@ -72,6 +83,8 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     height: 50px;
+    padding-left: 10px;
+    padding-top: 2px;
 }
 
 
