--- a/assets/css/index/style.css
+++ b/assets/css/index/style.css
@@ -35,10 +35,11 @@
     margin: 10px;
     margin-top: 0px;
     background-color: rgba(152, 251, 152, 1);
-    height: 100px;
+    height: 200px;
     width: 95%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    line-height: 26px;
     color: rgba(139, 0, 0, 1);
 
 }
