Added limited functionality to index buttons, added profile page.

--- a/assets/css/index/buttons.css
+++ b/assets/css/index/buttons.css
@@ -1,6 +1,6 @@
 /*
     Danielle Smith
-    buttons.css -- stylesheet to manipulate buttons
+    buttons.css -- stylesheet to manipulate appearance of buttons
 */
 
 
