--- a/assets/css/index/style.css
+++ b/assets/css/index/style.css
@@ -4,8 +4,6 @@
 */
 
 
-
-
 *{
     box-sizing: border-box;
 }
@@ -19,6 +17,7 @@
     padding: 7px;
     margin: 5px;
     margin-top: 8px;
+    border-radius: 10px;
 }
 
 
@@ -27,7 +26,7 @@
     width: 30%;
     margin: 15px;
     background-color: rgba(188, 143, 143, .75);
-    
+    border-radius: 10px;
 }
 
 .text{
@@ -41,7 +40,7 @@
     font-size: 16px;
     line-height: 26px;
     color: rgba(139, 0, 0, 1);
-
+    border-radius: 10px;
 }
 
 
