--- a/assets/css/index/style.css
+++ b/assets/css/index/style.css
@@ -20,15 +20,15 @@
     border-radius: 10px;
 }
 
-
+/* 
 .box{
     height: 70%;
     width: 30%;
     margin: 15px;
     background-color: rgba(188, 143, 143, .75);
     border-radius: 10px;
-}
-
+} */
+/* 
 .text{
     padding: 5px;
     margin: 10px;
@@ -41,9 +41,9 @@
     line-height: 26px;
     color: rgba(139, 0, 0, 1);
     border-radius: 10px;
-}
+} */
 
-
+/* 
 .boxHeader{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
@@ -54,25 +54,27 @@
     padding: 5px;
     background-color: rgba(245, 222, 179, .8);
 
-}
+} */
 
 
 body{
+
+/*     
     background-image: url("../../images/forks.jpg");
     background-repeat: no-repeat;
     background-position: right top;
     background-attachment: scroll;
-    background-size: cover;
+    background-size: cover; */
 }
 
-
+/* 
 #splashBox{
     width: 100%;
     margin: 5px;
     margin-top: 20px;
     padding-right: 20px;
 
-}
+} */
 
 
 
@@ -85,6 +87,7 @@ body{
     height: 50px;
     padding-left: 10px;
     padding-top: 2px;
+    position: absolute;
 }
 
 
