--- a/assets/css/profile/style.css
+++ b/assets/css/profile/style.css
@@ -26,17 +26,26 @@ body{
     text-align: center;
     padding: 7px;
     margin: 5px;
-    margin-top: 8px;
+    margin-top: 3px;
     border-radius: 10px;
 
 }
 
 .box{
-    width: 90%;
+    width: 95%;
     background-color: rgba(107, 45, 101, .75);
     margin: 0 auto;
+}
+
+.header{
+    padding: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 26px;
+
+
 
 }
+
 
 
 #header{
@@ -45,7 +54,8 @@ body{
     height: 50px;
     color: rgba(178, 34, 34, 1);
     padding-left: 10px;
-    padding-top: 4px;
+    padding-top: 7px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
