--- a/assets/css/index/style.css
+++ b/assets/css/index/style.css
@@ -14,10 +14,6 @@
     font-size: 16px;
     color: rgba(139, 0, 0, 1);
     text-align: center;
-    padding: 7px;
-    margin: 5px;
-    margin-top: 8px;
-    border-radius: 10px;
 }
 
 /* 
@@ -85,11 +81,14 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     height: 50px;
-    padding-left: 10px;
-    padding-top: 2px;
-    position: absolute;
+    position: fixed;
+    top: 0;
 }
 
+
+#welcome{
+    background-color: none;
+}
 
 #profile{
     background-color: rgba(152, 251, 152, 1);
@@ -104,5 +103,7 @@ body{
 #portfolio{
     background-color: rgba(173, 255, 47, 1);
 }
+
+
 
 
